# modpack-changelogger

./: .gitignore  pyproject.toml
.github/workflows/: Build-pyinstaller.yml  exe-publish.yml  pypi-publish.yml  test.yml
modpack_changelogger/: __init__.py  __main__.py  cli_wrapper.py  compare_packs.py  config_handler.py  get_json.py  get_mod_names.py  main.py  out.py  overrides_detection.py  utils.py
test/: test_.py
