[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "modpack_changelogger"
version = "1.1.0"
description = "A powerful and customizable Python tool to generate a changelog between two Minecraft modpacks in modrinth.mrpack or curseforge.zip format"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT License" }
authors = [{ name = "TheBossMagnus", email = "thebossmagnus@proton.me" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "aiohttp>=3.13.5",
    "click>=8.4.1",
]

[project.urls]
Homepage = "https://github.com/TheBossMagnus/modpack-changelogger"
Repository = "https://github.com/TheBossMagnus/modpack-changelogger"

[project.scripts]
modpack-changelogger = "modpack_changelogger.cli_wrapper:cli"

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
target-version = "py314"
exclude = [".venv/", "__pycache__/"]


lint.ignore = [
    "E501",   # line too long
]
fix = true

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
]
